# arbitui

./: .gitignore  README.md  demo.tape  justfile  pyproject.toml
src/: client.py  cube.json  db.py  dtos.py  handler.py  lib.py  message.py  qlib.py  server.py  settings.py  styles.tcss  theme.py  transition.py  widgets.py
