[project]
name = "arbitui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.12.5",
    "textual>=6.7.1",
    "textual-dev>=1.8.0",
    "textual-serve>=1.1.3",
    "websockets>=15.0.1",
]

[tool.pyrefly]
project-includes = ["**/*.py*"]
