[project]
name = "arbitui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiocache>=0.12.3",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "starlette>=0.51.0",
    "textual>=6.7.1",
    "textual-autocomplete>=4.0.6",
    "textual-dev>=1.8.0",
    "textual-plotext>=1.0.1",
    "textual-serve>=1.1.3",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[tool.pyrefly]
project-includes = ["**/*.py*"]
